[REF] website, website_blog: `badge` and `o_badge`
Rework of the `badge` and `o_badge` elements. The objective is to
improve/harmonize the design, streamline bootstrap inheritance and ease
edition.

The ability to apply arbitrary colors has been removed since to use the
"Style" drop-down ensures consistency and avoids issues related to text
readability.

Moreover, the sizing of `s_badge` scale with its immediate parent
element, in line with bootstrap default behavior.

task-3097005

--- a/addons/website/static/src/scss/bootstrap_overridden.scss
+++ b/addons/website/static/src/scss/bootstrap_overridden.scss
@@ -190,10 +190,6 @@ $input-border-radius: o-website-value('input-border-radius') !default;
 $input-border-radius-lg: o-website-value('input-border-radius-lg') !default;
 $input-border-radius-sm: o-website-value('input-border-radius-sm') !default;
 
-// Badge
-$badge-padding-y: 0.25em !default;
-$badge-padding-x: 0.4em !default;
-
 // Breadcrumbs
 $breadcrumb-padding-y: .75rem !default;
 $breadcrumb-padding-x: 1rem !default;
@@ -252,6 +248,11 @@ $accordion-button-active-color: color-contrast($light) !default;
 $accordion-button-focus-box-shadow: none !default;
 $accordion-icon-color: $body-color !default;
 $accordion-icon-active-color: $accordion-button-active-color !default;
+
+// Badge
+$badge-padding-y: .3em !default; // Ensure circle(-ish) badges for 1 digit numbers
+$badge-padding-x: .6em !default; // " "
+$badge-border-radius: $border-radius-pill !default;
 
 //Popover
 $popover-bg: $body-bg !default;
