--- a/addons/base_automation/views/base_automation_views.xml
+++ b/addons/base_automation/views/base_automation_views.xml
@@ -8,6 +8,10 @@
             <field name="arch" type="xml">
                 <form string="Automation Rule">
                     <sheet>
+                        <div class="oe_button_box" name="button_box">
+                            <button name="action_view_webhook_logs" type="object" string="Logs" class="oe_stat_button" icon="fa-list" attrs="{'invisible': [('trigger', '!=', 'on_webhook')]}">
+                            </button>
+                        </div>
                         <field name="active" invisible="1" />
                         <field name="model_name" invisible="1" />
                         <widget name="web_ribbon" title="Archived" bg_color="bg-danger" invisible="active"/>
@@ -69,6 +73,13 @@
                                         <button class="btn btn-seconadry" type="object" name="action_rotate_webhook_uuid" string="Rotate Secret" icon="fa-refresh" help="Change the URL's secret if you think the URL is no longer secure. You will have to update any automated system that calls this webhook to the new URL."/>
                                     </div>
                                 </div>
+                                <field name="log_webhook_calls" widget="boolean_toggle" attrs="{'invisible': [('trigger', '!=', 'on_webhook')]}"/>
+                                <field name="trg_date_id" class="oe_inline" string="Date Field"
+                                    options="{'no_open': True, 'no_create': True}"
+                                    attrs="{
+                                        'invisible': [('trigger', '!=', 'on_time')],
+                                        'required': [('trigger', 'in', ['on_time', 'on_time_created', 'on_time_updated'])]
+                                    }"/>
                                 <label for="trg_date_range" class="oe_inline" string="Delay"
                                     invisible="trigger not in ['on_time', 'on_time_created', 'on_time_updated']"/>
                                 <div class="o_row oe_inline" invisible="trigger not in ['on_time', 'on_time_created', 'on_time_updated']" >
