[IMP] various: error message apocalypse

--- a/addons/stock/wizard/stock_warn_insufficient_qty_views.xml
+++ b/addons/stock/wizard/stock_warn_insufficient_qty_views.xml
@@ -6,7 +6,7 @@
         <field name="arch" type="xml">
             <form>
                 <div>
-                    The product is not available in sufficient quantity
+                    The product is not available in sufficient quantity.
                     <span class="oe_inline" groups="stock.group_stock_multi_locations"> in
                         <strong><field name="location_id" readonly="True"/></strong>.
                     </span>
