[IMP] Dropdown unification - Usages conversion
This commit converts all usages of Dropdown and DropdownItem to the
new API. To do that, these changes have been made:

- "toggler" slots are now buttons in the default slot.
- Elements that were in the default slot are now in the "content" slot.
- When the default slot was a straightforward DropdownItem foreach loop,
it has now been converted to a list of items in js, given to the "items"
Dropdown prop.
- When the "class" prop was used, a surrounding div with said class has
been added to try to keep the styling intact.

--- a/addons/website/static/src/components/views/page_list.xml
+++ b/addons/website/static/src/components/views/page_list.xml
@@ -32,7 +32,7 @@
         <t t-foreach="websiteSelection" t-as="website" t-key="website.id">
             <SearchDropdownItem class="{ o_menu_item: true, selected: state.activeWebsite.id === website.id }"
                 checked="state.activeWebsite.id === website.id"
-                parentClosingMode="'none'"
+                closingMode="'none'"
                 t-esc="website.name"
                 onSelected="() => this.onSelectWebsite(website)"
             />
