--- a/addons/web/static/src/views/view.xml
+++ b/addons/web/static/src/views/view.xml
@@ -16,20 +16,22 @@
   </t>
 
   <t t-name="web.ReportViewMeasures">
-    <Dropdown togglerClass="'btn btn-primary'">
-            <t t-set-slot="toggler">
-                Measures <i class="fa fa-caret-down ms-1"/>
-            </t>
-            <t t-foreach="measures"
-               t-as="measure"
-               t-key="measure_value.name">
-                <div t-if="!measure_first and measure == '__count'" role="separator" class="dropdown-divider"/>
-                <DropdownItem class="{ o_menu_item: true, selected: activeMeasures.includes(measure) }"
-                  parentClosingMode="'none'"
-                  t-esc="measures[measure].string"
-                  onSelected="() => this.onMeasureSelected({ measure: measure_value.name })"
-                />
-            </t>
-        </Dropdown>
+    <Dropdown>
+      <button class="btn btn-primary">
+        Measures <i class="fa fa-caret-down ms-1"/>
+      </button>
+      <t t-set-slot="content">
+        <t t-foreach="measures"
+            t-as="measure"
+            t-key="measure_value.name">
+            <div t-if="!measure_first and measure == '__count'" role="separator" class="dropdown-divider"/>
+            <DropdownItem class="{ o_menu_item: true, selected: activeMeasures.includes(measure) }"
+              closingMode="'none'"
+              t-esc="measures[measure].string"
+              onSelected="() => this.onMeasureSelected({ measure: measure_value.name })"
+            />
+        </t>
+      </t>
+    </Dropdown>
   </t>
 </templates>
