--- a/addons/website_sale/views/product_views.xml
+++ b/addons/website_sale/views/product_views.xml
@@ -166,7 +166,8 @@
                     <field name="website_ribbon_id" groups="base.group_no_one" options="{'no_quick_create': True}"/>
                 </group>
                 <group name="product_template_images" string="Extra Product Media" invisible="not sale_ok">
-                    <field name="product_template_image_ids" class="o_website_sale_image_list" context="{'default_name': name}" mode="kanban" add-label="Add a Media" nolabel="1"/>
+                    <!-- <field name="product_template_image_ids" class="o_website_sale_image_list" context="{'default_name': name}" mode="kanban" add-label="Add a Media" nolabel="1"/> -->
+                    <field name="product_template_image_ids" widget="add_media" nolabel="1"/>
                 </group>
             </xpath>
         </field>
@@ -306,6 +307,7 @@
         </field>
     </record>
 
+    <!-- TODO: Remove me as I am no longer act as a one2many field window, used add_image widget insted  -->
     <!-- This view should only be used from the product o2m because the required field product_tmpl_id has to be automatically set. -->
     <record id="view_product_image_form" model="ir.ui.view">
         <field name="name">product.image.view.form</field>
@@ -382,5 +384,5 @@
             </kanban>
         </field>
     </record>
-
+    
 </odoo>
