[FIX] website: snippets color issues
Prior to this commit, some snippets used colors that weren't changed
depending on the color preset, which created color issues.

This commit fixes this commit.

task-3097005

--- a/addons/website/static/src/snippets/s_timeline/000.scss
+++ b/addons/website/static/src/snippets/s_timeline/000.scss
@@ -59,6 +59,7 @@
         span:not(.fa) {
             display: inline-block;
             padding: 5px;
+            background: $body-bg;
         }
         .fa {
             margin: 0 $grid-gutter-width/2;
