[IMP] website, website_sale: active light btn
Prior to this commit, toggle inputs using light color had no active
color.

This commit adds an active state in order to match the primary color.

task-3097005

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -505,6 +505,12 @@ font[class*='bg-'] {
     }
 }
 
+.btn-group .btn-light.active {
+    box-shadow: inset 0 0 0 $border-width o-color('primary');
+    border-color: transparent;
+    background-color: mix(o-color('primary'), $light, 10%);
+}
+
 // Badges
 .badge {
     // Similarly to list-group-item-x and alert-* classes, override text-bg-*
