--- a/addons/web/views/webclient_templates.xml
+++ b/addons/web/views/webclient_templates.xml
@@ -212,6 +212,18 @@
         <t t-call-assets="web.tests_assets" t-css="False"/>
     </template>
 
+    <template id="web.unit_tests_suite">
+        <t t-call="web.layout">
+            <t t-set="html_data" t-value="{'style': 'height: 100%;'}"/>
+            <t t-set="title">Web Unit Tests</t>
+            <t t-set="head">
+                <t t-call-assets="web.assets_unit_tests_setup" />
+                <t t-call-assets="web.assets_web" />
+                <t t-call-assets="web.assets_unit_tests" />
+            </t>
+        </t>
+    </template>
+
     <template id="web.qunit_suite">
         <t t-call="web.layout">
             <t t-set="html_data" t-value="{'style': 'height: 100%;'}"/>
