[IMP] portal: categories & common cards

--- a/addons/portal/views/portal_templates.xml
+++ b/addons/portal/views/portal_templates.xml
@@ -162,7 +162,7 @@
                                     <div class="o_portal_my_details">
                                         <div t-field="user_id.partner_id" t-options='{"widget": "contact", "fields": ["email", "phone", "address"]}'/>
                                     </div>
-                                    <a role="button" href="/my/account" class="btn btn-link p-0 mt-3"><i class="fa fa-pencil"/> Edit informations</a>
+                                    <a role="button" href="/my/account" class="btn btn-link p-0 mt-3"><i class="fa fa-pencil"/> Edit information</a>
                                     <hr t-if="sales_user"/>
                                     <div class="o_my_contact">
                                         <t t-call="portal.portal_contact"/>
@@ -180,15 +180,6 @@
                                 </div>
                                 <div class="o_portal_my_details">
                                     <div t-field="user_id.partner_id" t-options='{"widget": "contact", "fields": ["email", "phone", "address"]}'/>
-                                </div>
-                                <a role="button" href="/my/account" class="btn btn-link p-0 mt-3"><i class="fa fa-pencil"/> Edit informations</a>
-                                <div class="o_my_contact mt-5">
-                                    <t t-call="portal.portal_contact"/>
-                                </div>
-                                <div class="o_portal_my_security mt-4">
-                                    <h4>Account Security </h4>
-                                    <hr class="mt-1 mb-1"/>
-                                    <a href="/my/security"><i class="fa fa-pencil mx-1"/>Edit Security Settings</a>
                                 </div>
                                 <div class="small text-center text-muted d-none d-lg-block mt-5">
                                     Powered by
@@ -234,7 +225,26 @@
                 <div class="o_portal_docs row g-2">
                     <div class="o_portal_doc_spinner spinner-border text-o-color-2 align-self-center mt-5"/>
                     <p class="o_portal_no_doc_message d-none">No Documents to display</p>
-                    <div class="py-2 py-lg-1 order-1"/>
+                    <div t-if="portal_alert_category_enable" class="o_portal_category row g-2" id="portal_alert_category"/>
+                    <div t-if="portal_client_category_enable" class="o_portal_category row g-2" id="portal_client_category"/>
+                    <div t-if="portal_service_category_enable" class="o_portal_category row g-2" id="portal_service_category"/>
+                    <div t-if="portal_vendor_category_enable" class="o_portal_category row g-2" id="portal_vendor_category"/>
+                    <div class="o_portal_category row g-2" id="portal_common_category">
+                        <t t-call="portal.portal_docs_entry">
+                            <t t-set="icon" t-value="'/portal/static/src/img/portal-addresses.svg'"/>
+                            <t t-set="title">Addresses</t>
+                            <t t-set="text">Add, remove or modify your addresses</t>
+                            <t t-set="url" t-value="'/my/account'"/>
+                            <t t-set="config_card" t-value="True"/>
+                        </t>
+                        <t t-call="portal.portal_docs_entry">
+                            <t t-set="icon" t-value="'/portal/static/src/img/portal-connection.svg'"/>
+                            <t t-set="title">Connection &amp; Security</t>
+                            <t t-set="text">Configure your connection parameters</t>
+                            <t t-set="url" t-value="'/my/security'"/>
+                            <t t-set="config_card" t-value="True"/>
+                        </t>
+                    </div>
                 </div>
             </div>
             <div class="oe_structure" id="oe_structure_portal_my_home_2"/>
@@ -242,28 +252,27 @@
     </template>
 
     <template id="portal_docs_entry" name="My Portal Docs Entry">     
-    <div t-att-class="' ' + ('col-12 order-0' if bg_color else 'col-md-6 order-2')">
-        <a t-att-href="url" t-att-title="title" t-attf-class="d-flex justify-content-start gap-3 align-items-center h-100 #{bg_color if bg_color else 'bg-light p-3'} text-decoration-none">
-            <div t-if="icon" class="o_portal_icon align-self-start">
-                <img t-attf-src="#{icon}"/>
-            </div>
-            <div>
-                <h5 t-attf-class=" mb-0 #{'d-flex gap-3' if placeholder_count or count else ''}">
-                    <t t-if='count'>
-                        <t t-out="count"/>
-                    </t>
-                    <t t-elif="placeholder_count">
-                        <span t-att-data-placeholder_count="placeholder_count">
-                        </span>
-                    </t>
-                    <span t-out="title" class="mb-0"/>
-                </h5>
-                <p class="card-text text-600">
-                    <t t-out="text"/>
-                </p>
-            </div>
-        </a>
-    </div>
+        <div t-att-class="('' if config_card else 'd-none ') + ('col-12 order-0' if show_count else 'col-md-6 order-2')" id="portal_card">
+            <a t-att-href="url" t-att-title="title" t-attf-class="d-flex justify-content-start gap-3 align-items-center h-100 #{bg_color if bg_color else 'bg-light p-3'} text-decoration-none">
+                <div t-if="icon" class="o_portal_icon align-self-start">
+                    <img t-attf-src="#{icon}"/>
+                </div>
+                <div>
+                    <h5 t-attf-class=" mb-0 #{'d-flex gap-3' if placeholder_count or count else ''}">
+                        <t t-if='count'>
+                            <t t-out="count"/>
+                        </t>
+                        <t t-elif="placeholder_count">
+                            <span t-att-class="'mb-0 ' + ('' if show_count else 'd-none')" t-att-data-placeholder_count="placeholder_count"/>
+                        </t>
+                        <span t-out="title" class="mb-0"/>
+                    </h5>
+                    <p class="card-text text-600">
+                        <t t-out="text"/>
+                    </p>
+                </div>
+            </a>
+        </div>
     </template>
 
     <template id="portal_table" name="My Portal Table">
@@ -414,7 +423,7 @@
         <div class="o_portal_contact_details d-flex flex-column">
             <h6 class="text-muted">Your contact</h6>
             <div class="d-flex justify-content-start align-items-center gap-2">
-                <img class="rounded-circle o_portal_contact_img"/>
+                <img class="rounded-circle o_portal_contact_img" t-att-src="image_data_uri(sales_user.avatar_1024)" alt="Contact" width="30" height="30"/>
                 <h6 class="mb-0" t-out="sales_user.name"/>
             </div>
             <div class="o_portal_my_details">
