--- a/addons/payment/views/payment_form_templates.xml
+++ b/addons/payment/views/payment_form_templates.xml
@@ -217,11 +217,7 @@
                                     + (' ms-4 ms-md-0' if allow_token_selection else '')"
                     >
                         <span><i class="fa fa-lock"/> Secured by</span>
-                        <span t-out="dict(provider_sudo._fields['code']._description_selection(
-                                         provider_sudo.env
-                                     ))[provider_sudo.code]"
-                              class="text-break"
-                        />
+                        <span t-field="provider_sudo.code" />
                     </p>
                 </div>
             </div>
@@ -243,11 +239,7 @@
            class="align-self-end d-block d-md-none mb-0 small text-600"
         >
             <span><i class="fa fa-lock"/> Secured by</span>
-            <span t-out="dict(provider_sudo._fields['code']._description_selection(
-                             provider_sudo.env
-                         ))[provider_sudo.code]"
-                  class="text-break"
-            />
+            <span t-field="provider_sudo.code" />
         </p>
     </template>
 
@@ -352,11 +344,7 @@
                 <!-- === Provider name === -->
                 <p name="o_payment_secured_by" class="align-self-end mb-0 ms-auto small text-600">
                     <span><i class="fa fa-lock"/> Secured by</span>
-                    <span t-out="dict(provider_sudo._fields['code']._description_selection(
-                                     provider_sudo.env
-                                 ))[provider_sudo.code]"
-                          class="text-break"
-                    />
+                    <span t-field="provider_sudo.code" />
                 </p>
             </div>
         </div>
