--- a/addons/sale_loyalty/views/sale_order_views.xml
+++ b/addons/sale_loyalty/views/sale_order_views.xml
@@ -21,8 +21,8 @@
                         help="Update current promotional lines and select new rewards if applicable."
                         class="btn btn-secondary"/>
                 <button string="Discount" 
-                        name="%(sale.sale_order_line_wizard_action)d" 
-                        type="action" 
+                        name="action_open_discount_wizard" 
+                        type="object" 
                         class="btn btn-secondary"
                         groups="product.group_discount_per_so_line"/>
             </div>
