[IMP] website, web_editor: light bg on every inputs
This commit applies the light color on inputs to keep consistency with
the default theme redesign.

task-3097005

--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -817,6 +817,12 @@ blockquote {
             // (used by the 'fade-currentColor()' function).
             --o-border-color: #{o-color('300')};
             --o-border-color: #{fade-currentColor()};
+
+            // Forms
+            @if ($-bg-color == $light and $-bg-color != $body-bg) {
+                --o-input-bg: #{$body-bg};
+                --o-input-border-color: var(--o-border-color);
+            }
         }
     }
 }
