--- a/addons/website/static/src/scss/bootstrap_overridden.scss
+++ b/addons/website/static/src/scss/bootstrap_overridden.scss
@@ -190,6 +190,15 @@ $input-border-radius: o-website-value('input-border-radius') !default;
 $input-border-radius-lg: o-website-value('input-border-radius-lg') !default;
 $input-border-radius-sm: o-website-value('input-border-radius-sm') !default;
 
+$input-bg: var(--o-input-bg, #{$light}) !default;
+$input-border-color: var(--o-input-border-color, #{$light}) !default;
+$input-color: color-contrast($light) !default;
+$input-focus-bg: $body-bg !default;
+$input-focus-color: $body-color !default;
+
+$form-check-input-border: ($input-border-width or 1px) solid $input-border-color !default;
+$form-range-track-bg: $light !default;
+
 // Breadcrumbs
 $breadcrumb-padding-y: .75rem !default;
 $breadcrumb-padding-x: 1rem !default;
