[IMP] TMP website: typography
[IMP] website: improve display titles

This commit reduces the line height of display titles as the default BS
one (1.2 -> .9) is too big when the font is larger

It also adds margin bottom that scales with the font-size of the
display so the spacing is harmonious with the content that comes after

task-3097005

[IMP] website: add spacing under lead paragraphs

This commit adds a margin at the bottom of `.lead` paragraphs to
improve the general spacing

task-3097005

tmp

useful reads
- https://fonts.google.com/knowledge/using_type/vertical_spacing_and_line_height_in_design_systems
- https://alistapart.com/article/more-meaningful-typography/
- https://open.nytimes.com/how-we-implemented-a-baseline-grid-using-css-cb13cac45201
- https://edgdesign.co/blog/baseline-grids-in-css

--- a/addons/website/static/src/scss/bootstrap_overridden.scss
+++ b/addons/website/static/src/scss/bootstrap_overridden.scss
@@ -132,6 +132,10 @@ $h6-margin-bottom: o-website-value('h6-margin-bottom') or $headings-margin-botto
 
 $headings-color: o-color('o-cc1-headings') !default;
 
+$display-line-height: .9;
+
+$lead-font-size: o-website-value('font-size-base') * 1.2 !default;
+
 $font-weight-bold: 600 !default;
 
 $text-muted: mute-color($body-color) !default;
