[IMP] website: alerts color adaptation
Following the default theme redesign, this commit adapts the color of
the alert component.

task-3097005

--- a/addons/website/static/src/snippets/s_alert/000.scss
+++ b/addons/website/static/src/snippets/s_alert/000.scss
@@ -22,7 +22,8 @@
     }
     .s_alert_icon {
         float: left;
-        margin-right: 10px;
+        background-color: rgba($black, 10%); // Fallback
+        background-color: fade-currentColor(25%);
     }
     .s_alert_content {
         overflow: hidden;
