--- a/addons/website/static/src/scss/bootstrap_overridden.scss
+++ b/addons/website/static/src/scss/bootstrap_overridden.scss
@@ -271,6 +271,9 @@ $card-border-color: $border-color !default;
 $modal-header-border-width: 0 !default;
 $modal-footer-border-width: 0 !default;
 
+// Alert
+$alert-border-scale: -30% !default;
+
 // Close
 $btn-close-color: $body-color !default;
 
