--- a/addons/web/static/src/core/select_menu/select_menu.scss
+++ b/addons/web/static/src/core/select_menu/select_menu.scss
@@ -26,25 +26,6 @@
         color: red;
     }
 
-    .o_select_menu_menu {
-        min-width: fit-content;
-        max-height: 350px;
-        border: 1px solid $o-brand-primary;
-
-        .o_select_menu_sticky {
-            background-color: $dropdown-bg !important;
-
-            &.o_select_menu_item {
-                &:focus, &:hover {
-                    background: $dropdown-border-color !important;
-                }
-            }
-        }
-        .o_select_menu_group {
-            top: 40px;
-        }
-    }
-
     .o_select_menu_multi_select {
         .o_select_active {
             background: $o-brand-primary;
@@ -61,6 +42,36 @@
 
     .o_tag {
         margin: 2px;
+    }
+
+    &--sticky {
+        position: sticky;
+    }
+}
+
+.o_select_menu_menu {
+    min-width: fit-content;
+    max-height: 350px;
+    border: 1px solid $o-brand-primary;
+
+    .o_select_menu_sticky {
+        background-color: $dropdown-bg !important;
+
+        &.o_select_menu_item {
+            &:focus, &:hover {
+                background: $dropdown-border-color !important;
+            }
+        }
+    }
+    .o_select_menu_group:not(.o_select_menu_searchable_group) {
+        top: 40px;
+    }
+    .o_select_menu_searchable_group {
+        top: 52px;
+    }
+
+    .focus {
+        text-decoration: underline;
     }
 }
 
