--- a/addons/website/static/src/scss/bootstrap_overridden.scss
+++ b/addons/website/static/src/scss/bootstrap_overridden.scss
@@ -80,6 +80,8 @@ $grid-gutter-width: 30px !default;
 //
 // Define common padding and border radius sizes and more.
 
+$border-color: var(--o-border-color, #{o-color('300')}) !default;
+
 // Note: for the 'active' color, color preset edition is not really flexible but
 // this could come in a future update.
 $component-active-bg: o-color('o-cc1-btn-primary') !default;
@@ -137,6 +139,13 @@ $headings-color: o-color('o-cc1-headings') !default;
 $lead-font-size: 1.125rem !default;
 
 $text-muted: mute-color($body-color) !default;
+
+// Tables
+//
+// Customizes the `.table` component with basic values, each used across all table variations.
+
+$table-border-color: $border-color !default;
+$table-group-separator-color: $table-border-color !default;
 
 // Buttons
 //
@@ -227,3 +236,14 @@ $o-navbar-nav-pills-link-border-radius: if(o-website-value('header-links-style')
 // Accordion
 $accordion-color: inherit !default;
 $accordion-bg: inherit !default;
+$accordion-border-color: $border-color !default;
+
+//Popover
+$popover-border-color: $border-color !default;
+$popover-arrow-outer-color: $border-color !default;
+
+// Cards
+$card-border-color: $border-color !default;
+
+// HR Separator
+$hr-color: $border-color !default;
