--- a/addons/website/static/src/snippets/s_hr/000.scss
+++ b/addons/website/static/src/snippets/s_hr/000.scss
@@ -4,7 +4,8 @@
     hr {
         padding: 0;
         border: 0;
-        border-top: 1px solid currentColor;
+        border-top: 1px solid;
+        border-color: var(--o-border-color);
         margin: 0;
         color: inherit;
         // As BS5 added "opacity" and "background-color" on hr tag, we remove
