--- a/addons/website/static/src/snippets/s_process_steps/001.scss
+++ b/addons/website/static/src/snippets/s_process_steps/001.scss
@@ -30,7 +30,7 @@
             margin: $grid-gutter-width 0;
 
             path {
-                stroke: map-get($grays, '600');
+                stroke: var(--border-color);
                 stroke-width: 2;
                 fill: transparent;
             }
