--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -183,7 +183,7 @@ $o-wsale-products-layout-grid-gutter-width: min($grid-gutter-width / 2, $o-wsale
 
 #product_detail ~ .oe_structure.oe_empty > section:first-child,
 .o_shop_discussion_rating {
-    border-top: 1px solid map-get($grays, '400');
+    border-top: 1px solid var(--o-border-color);
 }
 
 .o_alternative_product {
