--- a/addons/website/static/src/scss/primary_variables.scss
+++ b/addons/website/static/src/scss/primary_variables.scss
@@ -1980,18 +1980,18 @@ $o-base-website-values-palette: (
     'btn-ripple': false,
 
     'btn-padding-y': null, // Default to BS
-    'btn-padding-x': null, // Default to BS
+    'btn-padding-x': 1rem,
     'btn-font-size': null, // Default to BS
     'btn-padding-y-sm': null, // Default to portal value
-    'btn-padding-x-sm': null, // Default to portal value
+    'btn-padding-x-sm': .5rem,
     'btn-font-size-sm': null, // Default to BS
-    'btn-padding-y-lg': null, // Default to BS
-    'btn-padding-x-lg': null, // Default to BS
-    'btn-font-size-lg': null, // Default to BS
+    'btn-padding-y-lg': 0.7rem,
+    'btn-padding-x-lg': 1.75rem,
+    'btn-font-size-lg': 1rem,
     'btn-border-width': null, // Default to BS
     'btn-border-radius': null, // Default to BS
     'btn-border-radius-sm': null, // Default to BS
-    'btn-border-radius-lg': null, // Default to BS
+    'btn-border-radius-lg': 2rem, // Default to BS
 
     'input-padding-y': null, // Default to BS
     'input-padding-x': null, // Default to BS
@@ -2068,9 +2068,9 @@ $o-user-website-values: () !default;
 
 // Those are BS values, except BS hardcodes them inside the $hx-font-size
 // variables directly and don't make them customizable.
-$o-theme-h1-font-size-multiplier: 2.5 !default;
-$o-theme-h2-font-size-multiplier: 2 !default;
-$o-theme-h3-font-size-multiplier: 1.75 !default;
+$o-theme-h1-font-size-multiplier: 3 !default;
+$o-theme-h2-font-size-multiplier: 2.5 !default;
+$o-theme-h3-font-size-multiplier: 2 !default;
 $o-theme-h4-font-size-multiplier: 1.5 !default;
 $o-theme-h5-font-size-multiplier: 1.25 !default;
 $o-theme-h6-font-size-multiplier: 1 !default;
